@@ -33,6 +33,10 @@ namespace UIExtensions
             { "Menu_Opt_DisplayPetsHpTextOnMastersPortrait", "Display Pets HP Text On Master's Portrait" },
             { "Menu_Opt_DisplayPetsHpBarOnMastersPortraitLeft", "Display Pets HP Bar On Master's Portrait (Left)" },
             { "Menu_Opt_DisplayPetsHpBarOnMastersPortraitRight", "Display Pets HP Bar On Master's Portrait (Right)" },
+            { "Menu_Sub_Inspector", "Inspector" },
+            { "Menu_Opt_ChangePositionOfInspector", "Change The Position Of The Inspector" },
+            { "Menu_Btn_ChangePositionOfInspectorLeft", "To The Side Of The Additional Action Bar" },
+            { "Menu_Btn_ChangePositionOfInspectorTurnBased", "To The Side Of The Turned-Based Combat Tracker" },
             { "Menu_Sub_PlayerInfomation", "Party Infomation In Combat" },
             { "Menu_Opt_OverridePlayerInfomation", "Override Base Game Settings Using Following Settings" },
             { "Menu_Opt_ShowNamesForParty", "Show names of party members" },
